--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Efeito chuva </title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="chuva">
-    </div>
+    <header>
+        <a href="" class="btn1">Botão 1</a>
+        <a href="" class="btn2">Botão 2</a>
+        <a href="" class="btn3">Botão 3</a>
+        <a href="" class="btn4">Botão 4</a>
+        <a href="" class="btn5">Botão 5</a>
+        <a href="" class="btn6">Botão 6</a>
+    </header>
 </body>
 </html>
