--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+    <title>Animação Carro</title>
 </head>
 <body>
-    <header>
-        <a href="" class="btn1">Botão 1</a>
-        <a href="" class="btn2">Botão 2</a>
-        <a href="" class="btn3">Botão 3</a>
-        <a href="" class="btn4">Botão 4</a>
-        <a href="" class="btn5">Botão 5</a>
-        <a href="" class="btn6">Botão 6</a>
-    </header>
+    <div class="geral">
+        <div class="texto">Animação CAR</div>
+        <div class="estrada"></div>
+        <div class="cidade"></div>
+
+        <div class="carro">
+        <img src="carro.png">
+        </div>
+        <div class="roda">
+                <img src="roda.png" class="roda-traseira">
+                <img src="roda.png" class="roda-dianteira">
+        </div>
+    </div>
 </body>
 </html>
