--- a/index.html
+++ b/index.html
@@ -2,24 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge"
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documento</title>
     <link rel="stylesheet" href="estilo.css">
-    <title>Animação Carro</title>
 </head>
 <body>
-    <div class="geral">
-        <div class="texto">Animação CAR</div>
-        <div class="estrada"></div>
-        <div class="cidade"></div>
+    <section>
+        <div class="card">
+            <div class="fundo">
+                <img src="facebook.png" width="150px">
+                <h2>FACEBOOK</h2>
+            </div>
+            <div class="frente">
+                <img src="facebook.png" width="150px">
+            </div>
+        </div>
+    </section>
+            <div class="card">
+                <div class="fundo">
+                <img src="whats.png" width="150px">
+                <h2>WHATSAPP</h2>
+                </div>
+            <div class="frente">
+                <img src="whats.png" width="150px">
+                </div>
+            </div>
 
-        <div class="carro">
-        <img src="carro.png">
-        </div>
-        <div class="roda">
-                <img src="roda.png" class="roda-traseira">
-                <img src="roda.png" class="roda-dianteira">
-        </div>
-    </div>
-</body>
+            <div class="card">
+                <div class="fundo">
+                <img src="whats.png" width="150px">
+                <h2>WHATSAPP</h2>
+                </div>
+            <div class="frente">
+                <img src="whats.png" width="150px">
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="fundo">
+                <img src="discord.png" width="150px">
+                <h2>DISCORD</h2>
+                </div>
+            <div class="frente">
+                <img src="discord.png" width="150px">
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="fundo">
+                <img src="pinterest.jpg" width="150px">
+                <h2>PINTEREST</h2>
+                </div>
+            <div class="frente">
+                <img src="pinterest.jpg" width="150px">
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="fundo">
+                <img src="twitter.png" width="150px">
+                <h2>TWITTER</h2>
+                </div>
+            <div class="frente">
+                <img src="twitter.png" width="150px">
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="fundo">
+                <img src="youtube.png" width="150px">
+                <h2>YOUTUBE</h2>
+                </div>
+            <div class="frente">
+                <img src="youtube.png" width="150px">
+                </div>
+            </div>
 </html>
+</body>
